--- a/news/src/main/resources/templates/fragments/news-card.html
+++ b/news/src/main/resources/templates/fragments/news-card.html
@@ -3,7 +3,11 @@
 <body>
     <div th:fragment="large-card (id, title, subject, time, image, brief)" class="card box-shadow">
         <a th:href="@{'/article/' + ${id}}" href="#">
-            <img class="card-img-top" th:src="${image}" th:alt="${title}" height="400px">
+        
+            <img th:unless="${image != null && image.startsWith('http')}" class="card-img-top" th:src="@{'/images/' + ${image}}" th:alt="${title}" height="400px">
+            <img th:if="${image != null && image.startsWith('http')}" class="card-img-top" th:src="${image}" th:alt="${title}" height="400px">
+            
+            
         </a>
         <div class="card-body">
             <a th:href="@{'/article/' + ${id}}" href="#">
@@ -16,7 +20,9 @@
     <div th:fragment="small-card (id, title, subject, time, image)" class="d-flex">
         <div class="p-1">
             <a th:href="@{'/article/' + ${id}}" href="#">
-                <img th:src="${image}" th:alt="${title}" width="100px" height="100px">
+            
+	            <img th:unless="${image.startsWith('http')}" th:src="@{'/images/' + ${image}}" width="100px" height="100px"/>
+                <img th:if="${image.startsWith('http')}" th:src="${image}" th:alt="${title}" width="100px" height="100px"/>
             </a>
         </div>
         <div class="w-100 px-3">
