--- a/news/src/main/resources/templates/fragments/header.html
+++ b/news/src/main/resources/templates/fragments/header.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" brief="width=device-width, initial-scale=1">
 
-    <title th:text="${title}">IEEE International Conference on System Science and Engineering</title>
+    <title th:text="${title}">Cập nhật nhanh chóng, kịp thời tình hình thế giới WB</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
