--- a/news/src/main/resources/templates/fragments/header.html
+++ b/news/src/main/resources/templates/fragments/header.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="head (title, block)">
     <meta charset="UTF-8">
-    <meta name="viewport" brief="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title th:text="${title}">Cập nhật nhanh chóng, kịp thời tình hình thế giới WB</title>
 
