--- a/news/src/main/resources/templates/fragments/footer.html
+++ b/news/src/main/resources/templates/fragments/footer.html
@@ -3,7 +3,7 @@
 <body>
     <footer th:fragment="footer" class="bg-dark text-white web-footer">
         <div class="container">
-            <p class="py-4">Copy right by thuan</p>
+            <p class="py-4">Copy right by Gateway Logicstis Viet Nam</p>
         </div>
     </footer>
 </body>
