--- a/news/src/main/resources/templates/home.html
+++ b/news/src/main/resources/templates/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header::head ('Hello', ~{})">
+<head th:replace="fragments/header::head ('Gateway News', ~{})">
 </head>
 <body>
     <div th:replace="fragments/header::header"></div>
