hien anh editor

--- a/news/src/main/resources/templates/fragments/editor.html
+++ b/news/src/main/resources/templates/fragments/editor.html
@@ -19,12 +19,12 @@
         </div>
         <div class="position-relative web-title-image-container">
         
-            <img th:hidden="${image != null && image == null}" th:unless="${image != null && image.startsWith('http')}" th:src="@{'/images/' + ${image}}" th:alt="${title}" height="400px" class="w-100 web-title-image" id="titleImage">
-            <img th:hidden="${image != null && image == null}" th:if="${image != null && image.startsWith('http')}" th:src="${image}" th:alt="${title}" height="400px" class="w-100 web-title-image" id="titleImage">
+            <img th:hidden="${image == null || image.strip() == ''}" th:unless="${image != null && image.startsWith('http')}" th:src="@{'/images/' + ${image}}" th:alt="${title}" height="400px" class="w-100 web-title-image" id="titleImage" >
+            <img th:hidden="${image == null || image.strip() == ''}" th:if="${image != null && image.startsWith('http')}" th:src="${image}" th:alt="${title}" height="400px" class="w-100 web-title-image" id="titleImage">
             
             <div th:classappend="${image} ? 'hide-control' : _" class="position-absolute w-100 web-title-image-control">
                 <div class="custom-file w-50 m-auto web-title-image-control-inner">
-                    <input type="file" name="titleImage" accept="image/jpeg, image/png, image/gif, image/jpg" class="custom-file-input btn-success" id="title-image-input">
+                    <input type="file" name="titleImage" accept="image/jpeg, image/png, image/gif, image/jpg" class="custom-file-input btn-success" id="title-image-input" onchange="previewImage(event)">
                     <label class="custom-file-label" for="title-image-input">Choose file</label>
                     
                     <input type="text" name="titleImage2"  id="urlImage">
@@ -83,6 +83,6 @@
             <h5 class="card-text text-danger" id="serverError"></h5>
         </div>
     </div>
-
+	
 </body>
 </html>
