--- a/news/src/main/resources/templates/fragments/header.html
+++ b/news/src/main/resources/templates/fragments/header.html
@@ -1,115 +1,139 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="head (title, block)">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title th:text="${title}">Cập nhật nhanh chóng, kịp thời</title>
-    
-      <link rel="icon" type="image/x-icon" th:href="@{/imgs/favicon.ico}" />
+<title th:text="${title}">Cập nhật nhanh chóng, kịp thời</title>
+<link rel="icon" type="image/x-icon" th:href="@{/imgs/favicon.ico}" />
+<!--    <link rel="icon" type="image/png" href="@{/imgs/favicon-32x32.png}" sizes="32x32" />
+		<link rel="icon" type="image/png" href="@{/imgs/favicon-16x16.png}" sizes="16x16" /> -->
+<!-- 		<link rel="icon" type="image/x-icon" href="@{/imgs/favicon-16x16.png}" sizes="16x16" />
+ -->
+<!-- Bootstrap -->
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+<link rel="stylesheet" th:href="@{/styles/global.css}">
 
-    <link rel="stylesheet" th:href="@{/styles/global.css}">
+<!-- Bootstrap and jQuery -->
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
-    <!-- Bootstrap and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<!-- Font Awesome -->
+<script defer
+	src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
-    <!-- Font Awesome -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+<script src="/scripts/global.js"></script>
 
-    <script src="/scripts/global.js"></script>
-
-    <th:block th:replace="${block}"></th:block>
+<th:block th:replace="${block}"></th:block>
 </head>
 <body>
-    <nav th:fragment="header" class="navbar navbar-dark bg-dark web-header">
-        <div class="container">
-        <a href="#" class="navbar-brand web-brand">
-            <img th:src="@{/imgs/logo512.png}" alt="Gateway" class="logo-image" style="width: 200px;">
-        </a>
-            
-            <span class="navbar-text">Cập nhật nhanh chóng, kịp thời, chính xác</span>
-            <form class="form-inline" action="/" method="GET">
-                <input class="form-control mr-sm-2" name="search" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-white my-2 my-sm-0 mr-sm-2" type="submit"><i class="fas fa-search"></i></button>
-                <a th:unless="${@securityServiceImpl.isLoggedIn()}" class="btn btn-secondary my-2 my-sm-0" href="/login"><i class="fas fa-user"></i></a>
-                <div th:if="${@securityServiceImpl.isLoggedIn()}" class="bg-white rounded d-flex my-2 my-sm-0">
-                    <p th:text="${#httpServletRequest.remoteUser}" class="ml-3 mr-2 my-auto"></p>
-                    <a class="btn btn-secondary" href="/logout"><i class="fas fa-power-off"></i></a>
-                </div>
-            </form>
-        </div>
-    </nav>
-    <div th:fragment="navbar" class="bg-light">
-        <div class="container">
-            <nav class="nav">
-                <a href="/" class="nav-link">Trang chủ</a>
-                <a href="https://gatewayviet.com" class="nav-link">Logistics</a>
-                <a href="#" class="nav-link">About</a>
-                <a href="#" class="nav-link">For Author</a>
-                <a href="#" class="nav-link">Program</a>
-                <a href="#" class="nav-link">Publication</a>
-                <a href="#" class="nav-link">Gallery</a>
-                <a href="#" class="nav-link">Contact</a>
-                <a th:if="${@securityServiceImpl.isLoggedIn()}" href="/editor" class="nav-link">New Article</a>
-            </nav>
-        </div>
-    </div>
-    <div th:fragment="slide" class="bg-secondary box-shadow-inset">
-        <div class="container py-2">
-            <div id="slide-show" class="carousel slide box-shadow" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li th:each="index : ${#numbers.sequence(0, #lists.size(latestNews)-1)}"
-                        data-target="#slide-show" th:data-slide-to="${index}" th:classappend="${index == 0 ? 'active' : _}"></li>
-                    <!--<li data-target="#slide-show" data-slide-to="0" class="active"></li>-->
-                    <!--<li data-target="#slide-show" data-slide-to="1"></li>-->
-                    <!--<li data-target="#slide-show" data-slide-to="2"></li>-->
-                </ol>
-                <div class="carousel-inner">
-                    <div th:each="news, iter : ${latestNews}" th:classappend="${iter.index == 0 ? 'active' : _}" class="carousel-item">
-                        <img th:unless="${news.image.startsWith('http')}" class="d-block w-100" th:src="@{'/images/' + ${news.image}}" th:alt="${news.title}" height="500px">
-                        <img th:if="${news.image.startsWith('http')}" class="d-block w-100" th:src="${news.image}" th:alt="${news.title}" height="500px">
-                        
-                        <div class="carousel-caption d-none d-md-block px-5 web-slide-caption">
-                            <a th:href="@{'/article/' + ${news.id}}"><h4 th:text="${news.title}" class="text-white"></h4></a>
-                            <p th:text="${news.brief}"></p>
-                        </div>
-                    </div>
-                    <!--<div class="carousel-item active">-->
-                        <!--<img class="d-block w-100" src="/styles/luv.jpg" alt="First slide" height="500px">-->
-                        <!--<div class="carousel-caption d-none d-md-block web-slide-caption">-->
-                            <!--<h5>Hello crushy</h5>-->
-                            <!--<p>How do u feel today</p>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="carousel-item">-->
-                        <!--<img class="d-block w-100" src="/styles/luv.jpg" alt="First slide" height="500px">-->
-                        <!--<div class="carousel-caption d-none d-md-block web-slide-caption">-->
-                            <!--<h5>Hello crushy</h5>-->
-                            <!--<p>How do u feel today</p>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="carousel-item">-->
-                        <!--<img class="d-block w-100" src="/styles/luv.jpg" alt="First slide" height="500px">-->
-                        <!--<div class="carousel-caption d-none d-md-block web-slide-caption">-->
-                            <!--<h5>Hello crushy</h5>-->
-                            <!--<p>How do u feel today</p>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                </div>
-                <a href="#slide-show" class="carousel-control-prev" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a href="#slide-show" class="carousel-control-next" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-            </div>
-        </div>
-    </div>
+	<nav th:fragment="header" class="navbar navbar-dark bg-dark web-header">
+		<div class="container">
+			<a href="#" class="navbar-brand web-brand"> <img
+				th:src="@{/imgs/logo512.png}" alt="Gateway" class="logo-image"
+				style="width: 200px;">
+			</a> <span class="navbar-text">Cập nhật nhanh chóng, kịp thời,
+				chính xác</span>
+			<form class="form-inline" action="/" method="GET">
+				<input class="form-control mr-sm-2" name="search" type="search"
+					placeholder="Search" aria-label="Search">
+				<button class="btn btn-white my-2 my-sm-0 mr-sm-2" type="submit">
+					<i class="fas fa-search"></i>
+				</button>
+				<a th:unless="${@securityServiceImpl.isLoggedIn()}"
+					class="btn btn-secondary my-2 my-sm-0" href="/login"><i
+					class="fas fa-user"></i></a>
+				<div th:if="${@securityServiceImpl.isLoggedIn()}"
+					class="bg-white rounded d-flex my-2 my-sm-0">
+					<p th:text="${#httpServletRequest.remoteUser}"
+						class="ml-3 mr-2 my-auto"></p>
+					<a class="btn btn-secondary" href="/logout"><i
+						class="fas fa-power-off"></i></a>
+				</div>
+			</form>
+		</div>
+	</nav>
+	<div th:fragment="navbar" class="bg-light">
+		<div class="container">
+			<nav class="nav">
+				<a href="/" class="nav-link">Trang chủ</a> <a
+					href="https://gatewayviet.com" class="nav-link">Logistics</a> <a
+					href="#" class="nav-link">About</a> <a href="#" class="nav-link">For
+					Author</a> <a href="#" class="nav-link">Program</a> <a href="#"
+					class="nav-link">Publication</a> <a href="#" class="nav-link">Gallery</a>
+				<a href="#" class="nav-link">Contact</a> <a
+					th:if="${@securityServiceImpl.isLoggedIn()}" href="/editor"
+					class="nav-link">New Article</a>
+			</nav>
+		</div>
+	</div>
+	<div th:fragment="slide" class="bg-secondary box-shadow-inset">
+		<div class="container py-2">
+			<div id="slide-show" class="carousel slide box-shadow"
+				data-ride="carousel">
+				<ol class="carousel-indicators">
+					<li
+						th:each="index : ${#numbers.sequence(0, #lists.size(latestNews)-1)}"
+						data-target="#slide-show" th:data-slide-to="${index}"
+						th:classappend="${index == 0 ? 'active' : _}"></li>
+					<!--<li data-target="#slide-show" data-slide-to="0" class="active"></li>-->
+					<!--<li data-target="#slide-show" data-slide-to="1"></li>-->
+					<!--<li data-target="#slide-show" data-slide-to="2"></li>-->
+				</ol>
+				<div class="carousel-inner">
+					<div th:each="news, iter : ${latestNews}"
+						th:classappend="${iter.index == 0 ? 'active' : _}"
+						class="carousel-item">
+						<img th:unless="${news.image.startsWith('http')}"
+							class="d-block w-100" th:src="@{'/images/' + ${news.image}}"
+							th:alt="${news.title}" height="500px"> <img
+							th:if="${news.image.startsWith('http')}" class="d-block w-100"
+							th:src="${news.image}" th:alt="${news.title}" height="500px">
+
+						<div
+							class="carousel-caption d-none d-md-block px-5 web-slide-caption">
+							<a th:href="@{'/article/' + ${news.id}}"><h4
+									th:text="${news.title}" class="text-white"></h4></a>
+							<p th:text="${news.brief}"></p>
+						</div>
+					</div>
+					<!--<div class="carousel-item active">-->
+					<!--<img class="d-block w-100" src="/styles/luv.jpg" alt="First slide" height="500px">-->
+					<!--<div class="carousel-caption d-none d-md-block web-slide-caption">-->
+					<!--<h5>Hello crushy</h5>-->
+					<!--<p>How do u feel today</p>-->
+					<!--</div>-->
+					<!--</div>-->
+					<!--<div class="carousel-item">-->
+					<!--<img class="d-block w-100" src="/styles/luv.jpg" alt="First slide" height="500px">-->
+					<!--<div class="carousel-caption d-none d-md-block web-slide-caption">-->
+					<!--<h5>Hello crushy</h5>-->
+					<!--<p>How do u feel today</p>-->
+					<!--</div>-->
+					<!--</div>-->
+					<!--<div class="carousel-item">-->
+					<!--<img class="d-block w-100" src="/styles/luv.jpg" alt="First slide" height="500px">-->
+					<!--<div class="carousel-caption d-none d-md-block web-slide-caption">-->
+					<!--<h5>Hello crushy</h5>-->
+					<!--<p>How do u feel today</p>-->
+					<!--</div>-->
+					<!--</div>-->
+				</div>
+				<a href="#slide-show" class="carousel-control-prev" role="button"
+					data-slide="prev"> <span class="carousel-control-prev-icon"
+					aria-hidden="true"></span> <span class="sr-only">Previous</span>
+				</a> <a href="#slide-show" class="carousel-control-next" role="button"
+					data-slide="next"> <span class="carousel-control-next-icon"
+					aria-hidden="true"></span> <span class="sr-only">Previous</span>
+				</a>
+			</div>
+		</div>
+	</div>
+
+
 </body>
