--- a/news/src/main/resources/static/styles/global.css
+++ b/news/src/main/resources/static/styles/global.css
@@ -9,6 +9,9 @@ body {
     min-height: 100vh;
     position: relative;
 }
+.slide-image {
+    height: 500px;
+}
 .box-shadow {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
