--- a/news/src/main/resources/templates/fragments/header.html
+++ b/news/src/main/resources/templates/fragments/header.html
@@ -74,27 +74,24 @@
 	</div>
 	<div th:fragment="slide" class="bg-secondary box-shadow-inset">
 		<div class="container py-2">
+			
 			<div id="slide-show" class="carousel slide box-shadow"
 				data-ride="carousel">
 				<ol class="carousel-indicators">
 					<li
 						th:each="index : ${#numbers.sequence(0, #lists.size(latestNews)-1)}"
 						data-target="#slide-show" th:data-slide-to="${index}"
-						th:classappend="${index == 0 ? 'active' : _}"></li>
-					<!--<li data-target="#slide-show" data-slide-to="0" class="active"></li>-->
-					<!--<li data-target="#slide-show" data-slide-to="1"></li>-->
-					<!--<li data-target="#slide-show" data-slide-to="2"></li>-->
+						th:classappend="${index == 0 ? 'active' : ''}"></li>
 				</ol>
 				<div class="carousel-inner">
 					<div th:each="news, iter : ${latestNews}"
-						th:classappend="${iter.index == 0 ? 'active' : _}"
-						class="carousel-item">
+						th:class="${iter.index == 0 ? 'carousel-item active' : 'carousel-item'}">
 						<img th:unless="${news.image.startsWith('http')}"
-							class="d-block w-100" th:src="@{'/images/' + ${news.image}}"
-							th:alt="${news.title}" height="500px"> <img
-							th:if="${news.image.startsWith('http')}" class="d-block w-100"
-							th:src="${news.image}" th:alt="${news.title}" height="500px">
-
+							class="d-block w-100 slide-image"
+							th:src="@{'/images/' + ${news.image}}" th:alt="${news.title}">
+						<img th:if="${news.image.startsWith('http')}"
+							class="d-block w-100 slide-image" th:src="${news.image}"
+							th:alt="${news.title}">
 						<div
 							class="carousel-caption d-none d-md-block px-5 web-slide-caption">
 							<a th:href="@{'/article/' + ${news.id}}"><h4
@@ -102,38 +99,34 @@
 							<p th:text="${news.brief}"></p>
 						</div>
 					</div>
-					<!--<div class="carousel-item active">-->
-					<!--<img class="d-block w-100" src="/styles/luv.jpg" alt="First slide" height="500px">-->
-					<!--<div class="carousel-caption d-none d-md-block web-slide-caption">-->
-					<!--<h5>Hello crushy</h5>-->
-					<!--<p>How do u feel today</p>-->
-					<!--</div>-->
-					<!--</div>-->
-					<!--<div class="carousel-item">-->
-					<!--<img class="d-block w-100" src="/styles/luv.jpg" alt="First slide" height="500px">-->
-					<!--<div class="carousel-caption d-none d-md-block web-slide-caption">-->
-					<!--<h5>Hello crushy</h5>-->
-					<!--<p>How do u feel today</p>-->
-					<!--</div>-->
-					<!--</div>-->
-					<!--<div class="carousel-item">-->
-					<!--<img class="d-block w-100" src="/styles/luv.jpg" alt="First slide" height="500px">-->
-					<!--<div class="carousel-caption d-none d-md-block web-slide-caption">-->
-					<!--<h5>Hello crushy</h5>-->
-					<!--<p>How do u feel today</p>-->
-					<!--</div>-->
-					<!--</div>-->
 				</div>
 				<a href="#slide-show" class="carousel-control-prev" role="button"
-					data-slide="prev"> <span class="carousel-control-prev-icon"
+					data-slide="prev" onclick="resetTimer()"> <span class="carousel-control-prev-icon"
 					aria-hidden="true"></span> <span class="sr-only">Previous</span>
 				</a> <a href="#slide-show" class="carousel-control-next" role="button"
-					data-slide="next"> <span class="carousel-control-next-icon"
-					aria-hidden="true"></span> <span class="sr-only">Previous</span>
+					data-slide="next" onclick="resetTimer()"> <span class="carousel-control-next-icon"
+					aria-hidden="true"></span> <span class="sr-only">Next</span>
 				</a>
 			</div>
 		</div>
 	</div>
+<script>
+    var slideTimer;
 
+    function startTimer() {
+        slideTimer = setInterval(function () {
+            $('#slide-show').carousel('next'); // Chuyển tới slide tiếp theo bằng cách sử dụng phương thức next() của carousel Bootstrap
+        }, 5000); // Thời gian delay giữa các slide (5 giây trong ví dụ)
+
+        // Thêm hàm resetTimer() vào sự kiện onload của trang để bắt đầu đếm ngay khi trang được tải
+    }
+
+    function resetTimer() {
+        clearInterval(slideTimer); // Xóa bỏ biến thời gian hiện tại
+        startTimer(); // Bắt đầu lại đếm thời gian từ đầu
+    }
+
+    window.onload = startTimer; // Bắt đầu đếm ngay khi trang được tải
+</script>
 
 </body>
